--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,15 @@
     <!-- //获取粗略坐标的权限(网络定位时使用) -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <!--允许振功效果-->
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <!-- 在窗体上挂在view的权限 -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+
+    <!--去电广播权限-->
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -41,9 +50,16 @@
         <activity android:name=".activities.Setup2Activity"></activity>
         <activity android:name=".activities.Setup3Activity"></activity>
         <activity android:name=".activities.Setup4Activity"></activity>
-        <activity android:name=".activities.ContactListActivity"></activity>]
+        <activity android:name=".activities.ContactListActivity"></activity>
         <activity android:name=".activities.QueryAddressActivity"></activity>
         <activity android:name=".activities.AToolActivity"></activity>
+        <activity android:name=".activities.ToastLocationActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
+        </activity>
+        <activity android:name=".activities.RocketBackgroundActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
+        </activity>
+        <activity android:name=".activities.BlackNumberActivity"></activity>
 
 
 
@@ -60,6 +76,11 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
         </receiver>
+
+        <service android:name=".service.AddressService"/>
+        <service android:name=".service.LocationService"/>
+        <service android:name=".service.RocketService"/>
+
     </application>
 
 </manifest>
