--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,17 @@
     <uses-permission android:name="android.permission.READ_SMS"/>
     <!--操作短信权限-->
     <uses-permission android:name="android.permission.WRITE_SMS"/>
+    <!--进程清理权限-->
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+    <!--快捷方式权限-->
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"/>
+    <!--获取任务栈权限-->
+    <uses-permission android:name="com.permission.GET_TASKS"/>
+    <!--清理缓存权限-->
+    <uses-permission android:name="android.permission.CLEAR_APP_CACHE"/>
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -40,12 +49,17 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activities.SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity android:name=".activities.HomeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.HOME" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.HomeActivity"></activity>
         <activity android:name=".activities.SettingActivity"></activity>
         <activity android:name=".activities.SetupOverActivity"></activity>
         <activity android:name=".activities.Setup1Activity"></activity>
@@ -63,7 +77,18 @@
         </activity>
         <activity android:name=".activities.BlackNumberActivity"></activity>
         <activity android:name=".activities.AppManageActivity"></activity>
-
+        <activity android:name=".activities.ProcessManageActivity"></activity>
+        <activity android:name=".activities.ProcessSettingActivity"></activity>
+        <activity android:name=".activities.CommonNumberActivity"></activity>
+        <activity android:name=".activities.AppLockActivity"></activity>
+        <activity android:name=".activities.EnterPsdActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
+        </activity>
+        <activity android:name=".activities.AnitVirusActivity"></activity>
+        <activity android:name=".activities.ClearCacheActivity"></activity>
+        <activity android:name=".activities.BaseClearActivity"></activity>
+        <activity android:name=".activities.SDCacheClearActivity"></activity>
+        <activity android:name=".activities.TrafficActivity"></activity>
 
 
         <receiver android:name=".receiver.BootReceiver">
@@ -80,10 +105,28 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name="com.app.phonesafe.receiver.MyAppWidgetProvider" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/process_widget_provider" />
+        </receiver>
+
+        <receiver android:name="com.app.phonesafe.receiver.KillProcessReciver" >
+            <intent-filter>
+                <action android:name="android.intent.action.KILL_BACKGROUND_PROCESS" />
+            </intent-filter>
+        </receiver>
+
+
         <service android:name=".service.AddressService"/>
         <service android:name=".service.LocationService"/>
         <service android:name=".service.RocketService"/>
         <service android:name=".service.BlackNumberService"/>
+        <service android:name=".service.LockScreenService"/>
+        <service android:name=".service.UpdateWidgetService"/>
+        <service android:name=".service.WatchDogService"/>
 
     </application>
 
